fix: edit info-container to be hidden by default

--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@ header {
 }
 
 .info-container {
-  display: flex;
+  display: none;
   margin: auto;
   width: 400px;
   height: 75px;
